--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
+<head>
+  <title>cv</title>
+  </head>
 <body>
-Hii Neha ;)
+  Neha Ninawe<br>
+  9503934643<br>
+  Rukhmini nagar khat road bhandra<br>
 </body>
 </html>
